test/corpus/array.txt


==================
array.txt :: empty array
==================
[]
---
(source_file
	(expression
		(array)
	)
)


==================
array.txt :: array with single value (single line)
==================
[ 0 ]
---
(source_file
	(expression
		(array
			(expression
				(number)
			)
		)
	)
)

==================
array.txt :: array with multiple values (single line)
==================
[ 0, "asdf", something ]
---
(source_file
	(expression
		(array
			(expression
				(number)
			)
			(expression
				(string_raw)
			)
			(expression
				(path
					(identifier)
				)
			)
		)
	)
)


==================
array.txt :: array with multiple values (multi line)
==================
[
	0,
	"asdf",
	something
]
---
(source_file
	(expression
		(array
			(expression
				(number)
			)
			(expression
				(string_raw)
			)
			(expression
				(path
					(identifier)
				)
			)
		)
	)
)



==================
array.txt :: array with multiple values (multi line, trailing comma)
==================
[
	0,
	"asdf",
	something,
]
---
(source_file
	(expression
		(array
			(expression
				(number)
			)
			(expression
				(string_raw)
			)
			(expression
				(path
					(identifier)
				)
			)
		)
	)
)




==================
array.txt :: typical filter setup
==================
def Character = new object
	.filters = [
		0,
		"asdf",
		something,
	]
---
(source_file
	(stmt_assign
		(path
			(identifier)
		)
		(assignment)
		(expression
			(op)
			(keyword)
		)
	)
	(stmt_assign
		(path
			(identifier)
		)
		(assignment)
		(expression
			(array
				(expression
					(number)
				)
				(expression
					(string_raw)
				)
				(expression
		(path
			(identifier)
		)
				)
			)
		)
	)
)
