test/corpus/dialog.txt

==================
dialog.txt :: Raw empty string, 1 double quote
==================
""
---
(source_file
	(statement_dialog
		(string_raw)
	)
)

==================
dialog.txt :: Raw empty string, 3 double quotes
==================
""""""
---
(source_file
	(statement_dialog
		(string_raw)
	)
)

==================
dialog.txt :: Raw empty string, 1 single quote
==================
''
---
(source_file
	(statement_dialog
		(string_raw)
	)
)

==================
dialog.txt :: Raw empty string, 3 single quotes
==================
''''''
---
(source_file
	(statement_dialog
		(string_raw)
	)
)

==================
dialog.txt :: Rich empty string, 1 backtick quote
==================
``
---
(source_file
	(statement_dialog
		(string_rich)
	)
)

==================
dialog.txt :: Rich empty string, 3 backtick quote
==================
``````
---
(source_file
	(statement_dialog
		(string_rich)
	)
)


==================
dialog.txt :: Rich empty block, angle quote
==================
>
---
(source_file
	(statement_dialog
		(string_rich)
	)
)


==================
dialog.txt :: Rich empty block, plus quote
==================
+
---
(source_file
	(statement_dialog
		(string_rich)
	)
)


==================
dialog.txt :: Rich block, single line
==================
>	Hello
---
(source_file
	(statement_dialog
		(string_rich)
	)
)


==================
dialog.txt :: Rich block, single line; path
==================
>	Hello
rubin
---
(source_file
	(statement_dialog
		(string_rich)
	)
	(path
		(identifier)
	)
)


==================
dialog.txt :: Path; rich block, single line
==================
rubin
>	Hello
---
(source_file
	(path
		(identifier)
	)
	(statement_dialog
		(string_rich)
	)
)


==================
dialog.txt :: Rich block, multi line; path
==================
>	Hello and
	Goodbye
rubin
---
(source_file
	(statement_dialog
		(string_rich)
	)
	(path
		(identifier)
	)
)


==================
dialog.txt :: Rich block, single line x2
==================
>	Hello and

+	Goodbye

---
(source_file
	(statement_dialog
		(string_rich)
	)
	(statement_dialog
		(string_rich)
	)
)


==================
dialog.txt :: Path; rich block, multi line x2
==================
rubin

>	Hello and
	Goodbye
+	And hello again!

---
(source_file
	(path
		(identifier)
	)
	(statement_dialog
		(string_rich)
	)
	(statement_dialog
		(string_rich)
	)
)
