test/corpus/expression.txt


==================
expression.txt :: x == y
==================
x == y
------------------
(source_file
	(expression
		(path
			(identifier)
		)
		(op)
		(path
			(identifier)
		)
	)
)


==================
expression.txt :: x != y
==================
x != y
------------------
(source_file
	(expression
		(path
			(identifier)
		)
		(op)
		(path
			(identifier)
		)
	)
)
