test/corpus/func.txt

==================
func.txt :: simple function
==================
think()
---
(source_file
	(expression
		(function_call
			(path
				(identifier)
			)
		)
	)
)

==================
func.txt :: function with args
==================
think(0)
---
(source_file
	(expression
		(function_call
			(path
				(identifier)
			)
			(expression
				(number)
			)
		)
	)
)


==================
func.txt :: function with more args
==================
think.better("to", me)
---
(source_file
	(expression
		(function_call
			(path
				(identifier)
				(identifier)
			)
			(expression
				(string_raw)
			)
			(expression
				(path
					(identifier)
				)
			)
		)
	)
)



==================
func.txt :: await function
==================
await travel(here)
---
(source_file
	(expression
		(function_call
			(path
				(identifier)
			)
			(expression
				(path
					(identifier)
				)
			)
		)
	)
)
