test/corpus/path.txt
==================
path.txt :: Single-character identifier
==================
x
---
(source_file
	(expression
		(path
			(identifier)
		)
	)
)


==================
path.txt :: Single-word identifier
==================
avalon009
---
(source_file
	(expression
		(path
			(identifier)
		)
	)
)


==================
path.txt :: Multi-identifier absolute path
==================
character.name
---
(source_file
	(expression
		(path
			(identifier)
			(identifier)
		)
	)
)


==================
path.txt :: Multi-identifier relative path
==================
.character.name
---
(source_file
	(expression
		(path
			(identifier)
			(identifier)
		)
	)
)


==================
path.txt :: Two paths on separate lines
==================
Rubin
Esther
---
(source_file
	(expression
		(path
			(identifier)
		)
	)
	(expression
		(path
			(identifier)
		)
	)
)


==================
path.txt :: Triple path
==================
path.path.path
---
(source_file
	(expression
		(path
			(identifier)
			(identifier)
			(identifier)
		)
	)
)



==================
path.txt :: Narrator path
==================
~
---
(source_file
	(expression
		(path
			(identifier)
		)
	)
)
