test/corpus/statement_assign.txt


==================
assign.txt :: Basic (x = 0)
==================
x = 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Add equals
==================
x += 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Sub equals
==================
x -= 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Multiply equals
==================
x *= 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Divide equals
==================
x /= 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Divide equals
==================
x /= 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Question equals
==================
x ?= 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Express equals
==================
x &= 0
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)


==================
assign.txt :: Equals rich string
==================
.name => Rubin
---
(source_file
	(statement_assign
		(path
			(operator)
			(identifier)
		)
		(assigner)
		(expression
			(string_rich)
		)
	)
)



==================
assign.txt :: Equals rich string block
==================
.name => Rubin
	{ru} Рубин
	{ja} ルービン
	{zh} 鱼宾
---
(source_file
	(statement_assign
		(path
			(operator)
			(identifier)
		)
		(assigner)
		(expression
			(string_rich)
		)
	)
)


==================
assign.txt :: New object assignment; name assignment
==================
Rubin = new object
	.name => Rubin
		{ru} Рубин
		{ja} ルービン
		{zh} 鱼宾
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(keyword)
			(keyword)
		)
	)
	(statement_assign
		(path
			(operator)
			(identifier)
		)
		(assigner)
		(expression
			(string_rich)
		)
	)
)


==================
assign.txt :: Full character assignment
==================
Rubin = new object
	.name => Rubin
		{ru} Рубин
		{ja} ルービン
		{zh} 鱼宾
	.age = 24
---
(source_file
	(statement_assign
		(path
			(identifier)
		)
		(assigner)
		(expression
			(keyword)
			(keyword)
		)
	)
	(statement_assign
		(path
			(operator)
			(identifier)
		)
		(assigner)
		(expression
			(string_rich)
		)
	)
	(statement_assign
		(path
			(operator)
			(identifier)
		)
		(assigner)
		(expression
			(number)
		)
	)
)
